Set up hyper parameter tuning

--- a/nn.ipynb
+++ b/nn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNiYc2sn/YlIIi9xuyKLawU",
+      "authorship_tag": "ABX9TyNWBec6yJabTyAyZEI3bhee",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,8 +46,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "\n",
         "air_canada = pd.read_csv('./new_data.csv')\n",
         "air_canada = air_canada.dropna(subset=['choice'])\n",
         "\n",
@@ -191,13 +189,109 @@
         "# Compile the model\n",
         "model.compile(optimizer='adam',\n",
         "              loss='categorical_crossentropy',\n",
-        "              metrics=['accuracy'])\n"
+        "              metrics=['accuracy'])"
       ],
       "metadata": {
         "id": "V026ZvLQQe5V"
       },
-      "execution_count": 30,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_model(optimizer='adam', activation='relu'):\n",
+        "  model = tf.keras.Sequential([\n",
+        "  tf.keras.layers.InputLayer(input_shape=(20,)),  # Input layer expecting 20 features per row\n",
+        "  tf.keras.layers.Dense(64, activation=activation),\n",
+        "  tf.keras.layers.Dense(32, activation=activation),\n",
+        "  tf.keras.layers.Dense(3, activation='softmax')  # Output layer with 4 choices (assuming 4 classes in 'choice')\n",
+        "  ])\n",
+        "\n",
+        "  # Compile the model\n",
+        "  model.compile(optimizer=optimizer,\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])\n",
+        "\n",
+        "  return model"
+      ],
+      "metadata": {
+        "id": "7mSz3INhzuCF"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install scikeras"
+      ],
+      "metadata": {
+        "id": "bgTEwcflzbOq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from scikeras.wrappers import KerasClassifier\n",
+        "\n",
+        "keras_classifier = KerasClassifier(model=create_model, verbose=0)\n",
+        "\n",
+        "# Define the hyperparameter grid for neural network\n",
+        "param_grid = {\n",
+        "    'model__optimizer': ['adam', 'sgd'],          # Optimizers to try\n",
+        "    'model__activation': ['relu', 'tanh'],        # Activation functions for the hidden layers\n",
+        "    'batch_size': [10, 20],                       # Batch sizes\n",
+        "    'epochs': [10, 20],                           # Number of epochs\n",
+        "}\n",
+        "\n",
+        "# GridSearchCV for KerasClassifier\n",
+        "rnd_search = GridSearchCV(estimator=keras_classifier,\n",
+        "                          param_grid=param_grid,\n",
+        "                          scoring='accuracy',\n",
+        "                          cv=3,\n",
+        "                          verbose=3,\n",
+        "                          n_jobs=-1)\n",
+        "\n",
+        "# Fit the model\n",
+        "rnd_search.fit(X_train_prep, y_train_prep)\n",
+        "\n",
+        "# Print the best parameters and score\n",
+        "print(f\"Best: {rnd_search.best_score_} using {rnd_search.best_params_}\")\n",
+        "\n",
+        "# Evaluate the best model on the test set\n",
+        "best_model = rnd_search.best_estimator_\n",
+        "test_accuracy = best_model.score(X_test, y_test)\n",
+        "print(f\"Test Accuracy: {test_accuracy:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tVHuX6nwyHuz",
+        "outputId": "1da0fdb7-d552-4888-9a64-48a4fdec2438"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 3 folds for each of 16 candidates, totalling 48 fits\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
