--- a/models/nn.ipynb
+++ b/models/nn.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyNWBec6yJabTyAyZEI3bhee",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Crazydodo123/code-ml24/blob/main/nn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -45,36 +27,41 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "mTX8JMWNRumc"
+      },
+      "outputs": [],
       "source": [
-        "air_canada = pd.read_csv('./new_data.csv')\n",
+        "air_canada = pd.read_csv('../datasets/new_data.csv')\n",
         "air_canada = air_canada.dropna(subset=['choice'])\n",
         "\n",
         "y = air_canada['choice']\n",
         "X = air_canada.drop(['id', 'Unnamed: 0','flight_departure_datetime', 'purchase_datetime', 'ticket_id', 'choice'], axis=1)"
-      ],
-      "metadata": {
-        "id": "mTX8JMWNRumc"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "Qp52IsVAR66M"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "# Split data into train (80%), validation (10%), and test (10%)\n",
         "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)"
-      ],
-      "metadata": {
-        "id": "Qp52IsVAR66M"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "m_BH5SLIZrIo"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.compose import ColumnTransformer\n",
@@ -93,28 +80,28 @@
         "    ('num', num_pipeline, ['date_difference', 'trip_type', 'branded_fare', 'number_of_pax', 'ADVS_price', 'PREF_price',\n",
         "       'ADVS_capacity', 'PREF_capacity', 'ADVS_inventory', 'PREF_inventory'])\n",
         "  ], remainder='drop')"
-      ],
-      "metadata": {
-        "id": "m_BH5SLIZrIo"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "fP-1JpL6Z8Tg"
+      },
+      "outputs": [],
       "source": [
         "X_train_prep = preprocessing.fit_transform(X_train)\n",
         "X_val_prep = preprocessing.fit_transform(X_val)\n",
         "X_test_prep = preprocessing.transform(X_test)"
-      ],
-      "metadata": {
-        "id": "fP-1JpL6Z8Tg"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "id": "4DzOBegNRtZ5"
+      },
+      "outputs": [],
       "source": [
         "# One-hot encode the y (choice) column\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
@@ -125,15 +112,15 @@
         "y_train_prep = encoder.fit_transform(pd.DataFrame(y_train))\n",
         "y_val_prep = encoder.fit_transform(pd.DataFrame(y_val))\n",
         "y_test_prep = encoder.fit_transform(pd.DataFrame(y_test))"
-      ],
-      "metadata": {
-        "id": "4DzOBegNRtZ5"
-      },
-      "execution_count": 13,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "id": "kPuMy187SKzA"
+      },
+      "outputs": [],
       "source": [
         "# Convert data to TensorFlow tensors\n",
         "X_train_tensor = tf.convert_to_tensor(X_train_prep, dtype=tf.float32)\n",
@@ -142,18 +129,11 @@
         "y_val_tensor = tf.convert_to_tensor(y_val_prep, dtype=tf.float32)\n",
         "X_test_tensor = tf.convert_to_tensor(X_test_prep, dtype=tf.float32)\n",
         "y_test_tensor = tf.convert_to_tensor(y_test_prep, dtype=tf.float32)"
-      ],
-      "metadata": {
-        "id": "kPuMy187SKzA"
-      },
-      "execution_count": 16,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train_tensor.shape, X_val_tensor.shape, X_test_tensor.shape"
-      ],
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -161,22 +141,29 @@
         "id": "ryGPmd5QqvOw",
         "outputId": "e06b9589-4284-42a1-e0e7-3ee00db4b424"
       },
-      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(TensorShape([153998, 20]), TensorShape([19250, 20]), TensorShape([19250, 20]))"
             ]
           },
+          "execution_count": 27,
           "metadata": {},
-          "execution_count": 27
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "X_train_tensor.shape, X_val_tensor.shape, X_test_tensor.shape"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "id": "V026ZvLQQe5V"
+      },
+      "outputs": [],
       "source": [
         "# Create a basic TensorFlow Sequential model that takes input with 20 features\n",
         "model = tf.keras.Sequential([\n",
@@ -190,15 +177,15 @@
         "model.compile(optimizer='adam',\n",
         "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
-      ],
-      "metadata": {
-        "id": "V026ZvLQQe5V"
-      },
-      "execution_count": 34,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {
+        "id": "7mSz3INhzuCF"
+      },
+      "outputs": [],
       "source": [
         "def create_model(optimizer='adam', activation='relu'):\n",
         "  model = tf.keras.Sequential([\n",
@@ -214,26 +201,46 @@
         "              metrics=['accuracy'])\n",
         "\n",
         "  return model"
-      ],
-      "metadata": {
-        "id": "7mSz3INhzuCF"
-      },
-      "execution_count": 46,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install scikeras"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "bgTEwcflzbOq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install scikeras"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tVHuX6nwyHuz",
+        "outputId": "1da0fdb7-d552-4888-9a64-48a4fdec2438"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fitting 3 folds for each of 16 candidates, totalling 48 fits\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
         "from scikeras.wrappers import KerasClassifier\n",
@@ -266,35 +273,15 @@
         "best_model = rnd_search.best_estimator_\n",
         "test_accuracy = best_model.score(X_test, y_test)\n",
         "print(f\"Test Accuracy: {test_accuracy:.2f}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tVHuX6nwyHuz",
-        "outputId": "1da0fdb7-d552-4888-9a64-48a4fdec2438"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fitting 3 folds for each of 16 candidates, totalling 48 fits\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
-            "  warnings.warn(\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "LUjaSwcQQ6iC"
+      },
+      "outputs": [],
       "source": [
         "# Train the model\n",
         "model.fit(X_train_tensor, y_train_tensor, epochs=20, validation_data=(X_val_tensor, y_val_tensor))\n",
@@ -302,12 +289,25 @@
         "# Evaluate the model on the test data\n",
         "test_loss, test_accuracy = model.evaluate(X_test_tensor, y_test_tensor)\n",
         "print(f\"Test accuracy: {test_accuracy:.2f}\")"
-      ],
-      "metadata": {
-        "id": "LUjaSwcQQ6iC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyNWBec6yJabTyAyZEI3bhee",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
