--- a/models/boost_search.ipynb
+++ b/models/boost_search.ipynb
@@ -180,6 +180,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200, 300],           # Number of boosting rounds\n",
+    "    'learning_rate': [0.01, 0.1, 0.2],         # Step size shrinkage\n",
+    "    'max_depth': [3, 5, 7],                    # Maximum depth of the trees\n",
+    "    'min_child_weight': [1, 3, 5],             # Minimum sum of instance weight needed in a child\n",
+    "    'subsample': [0.6, 0.8, 1.0],              # Subsample ratio of the training instances\n",
+    "    'colsample_bytree': [0.6, 0.8, 1.0],       # Subsample ratio of columns when constructing each tree\n",
+    "    'gamma': [0, 0.1, 0.2],                    # Minimum loss reduction to make a further partition on a leaf node\n",
+    "}\n",
+    "\n",
+    "rnd_search = GridSearchCV(bst,\n",
+    "    param_grid=param_grid, verbose=3, cv=3, n_jobs=-1,\n",
+    "    scoring='neg_root_mean_squared_error')\n",
+    "\n",
+    "rnd_search.fit(X_train_prep, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnd_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_best = rnd_search.best_estimator_.predict(X_test_prep)\n",
+    "\n",
+    "f1_score(y_pred_best, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Predicting"
    ]
   },
@@ -204,7 +256,7 @@
    "source": [
     "X_to_predict, y_to_predict = air_canada_to_predict.drop(['id', 'ticket_id', 'choice'], axis=1), air_canada_to_predict[['id']]\n",
     "X_to_predict_prep = preprocessing.transform(X_to_predict)\n",
-    "y_to_predict['choice'] = bst.predict(X_to_predict_prep)"
+    "y_to_predict['choice'] = rnd_search.best_estimator_.predict(X_to_predict_prep)"
    ]
   },
   {
