--- a/nn.ipynb
+++ b/nn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOj2zRirT2BPtTov6+r0IG0",
+      "authorship_tag": "ABX9TyN7JTcGmWmtMcTJb9/Tbc9H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "V026ZvLQQe5V"
       },
-      "execution_count": 80,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -278,10 +278,63 @@
         "print(f\"Test accuracy: {test_accuracy:.2f}\")"
       ],
       "metadata": {
-        "id": "LUjaSwcQQ6iC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LUjaSwcQQ6iC",
+        "outputId": "0bf58bec-c7d6-4676-8d33-f5749ea08646"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 2ms/step - accuracy: 0.7337 - loss: 0.6294 - val_accuracy: 0.7387 - val_loss: 0.6173\n",
+            "Epoch 2/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 1ms/step - accuracy: 0.7415 - loss: 0.6027 - val_accuracy: 0.7424 - val_loss: 0.6106\n",
+            "Epoch 3/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2ms/step - accuracy: 0.7434 - loss: 0.6010 - val_accuracy: 0.7408 - val_loss: 0.6118\n",
+            "Epoch 4/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7421 - loss: 0.6013 - val_accuracy: 0.7451 - val_loss: 0.6094\n",
+            "Epoch 5/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 1ms/step - accuracy: 0.7438 - loss: 0.5998 - val_accuracy: 0.7439 - val_loss: 0.6089\n",
+            "Epoch 6/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1ms/step - accuracy: 0.7443 - loss: 0.5988 - val_accuracy: 0.7439 - val_loss: 0.6089\n",
+            "Epoch 7/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7435 - loss: 0.6016 - val_accuracy: 0.7429 - val_loss: 0.6075\n",
+            "Epoch 8/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7424 - loss: 0.6010 - val_accuracy: 0.7425 - val_loss: 0.6075\n",
+            "Epoch 9/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 2ms/step - accuracy: 0.7448 - loss: 0.5973 - val_accuracy: 0.7440 - val_loss: 0.6083\n",
+            "Epoch 10/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 2ms/step - accuracy: 0.7454 - loss: 0.5962 - val_accuracy: 0.7398 - val_loss: 0.6093\n",
+            "Epoch 11/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 2ms/step - accuracy: 0.7452 - loss: 0.5955 - val_accuracy: 0.7433 - val_loss: 0.6098\n",
+            "Epoch 12/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 2ms/step - accuracy: 0.7451 - loss: 0.5974 - val_accuracy: 0.7432 - val_loss: 0.6094\n",
+            "Epoch 13/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7460 - loss: 0.5968 - val_accuracy: 0.7446 - val_loss: 0.6075\n",
+            "Epoch 14/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 1ms/step - accuracy: 0.7459 - loss: 0.5971 - val_accuracy: 0.7436 - val_loss: 0.6075\n",
+            "Epoch 15/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7479 - loss: 0.5917 - val_accuracy: 0.7443 - val_loss: 0.6078\n",
+            "Epoch 16/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 2ms/step - accuracy: 0.7445 - loss: 0.5962 - val_accuracy: 0.7429 - val_loss: 0.6090\n",
+            "Epoch 17/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 1ms/step - accuracy: 0.7462 - loss: 0.5961 - val_accuracy: 0.7437 - val_loss: 0.6069\n",
+            "Epoch 18/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2ms/step - accuracy: 0.7463 - loss: 0.5938 - val_accuracy: 0.7431 - val_loss: 0.6077\n",
+            "Epoch 19/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7457 - loss: 0.5944 - val_accuracy: 0.7438 - val_loss: 0.6082\n",
+            "Epoch 20/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7437 - loss: 0.5977 - val_accuracy: 0.7446 - val_loss: 0.6076\n",
+            "\u001b[1m602/602\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.7372 - loss: 0.6130\n",
+            "Test accuracy: 0.74\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -299,7 +352,7 @@
       "metadata": {
         "id": "9wf4HXUGS1_5"
       },
-      "execution_count": 32,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -310,7 +363,57 @@
       "metadata": {
         "id": "6sz-AiuaXjfn"
       },
-      "execution_count": 71,
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = model.predict(X_to_predict_prep)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AAkLZjjfe94K",
+        "outputId": "ad1cfca9-d825-4a7e-9d27-b2432da45d12"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m2006/2006\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: save prediction in a csv file with column named choice_prediction\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Assuming 'prediction' is a NumPy array of predicted probabilities\n",
+        "predicted_classes = np.argmax(predictions, axis=1)\n",
+        "\n",
+        "# Create a DataFrame with the predictions\n",
+        "results_df = pd.DataFrame({'choice_prediction': predicted_classes})\n",
+        "\n",
+        "# Concatenate the results with the original 'id' column\n",
+        "results_df = pd.concat([y_to_predict, results_df], axis=1)\n",
+        "\n",
+        "\n",
+        "# Save the DataFrame to a CSV file\n",
+        "results_df.to_csv('prediction.csv', index=False)\n"
+      ],
+      "metadata": {
+        "id": "5B_erD5egAgo"
+      },
+      "execution_count": 98,
       "outputs": []
     }
   ]
