Add new neural network predictions

--- a/models/nn.ipynb
+++ b/models/nn.ipynb
@@ -1,10 +1,28 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyN7JTcGmWmtMcTJb9/Tbc9H",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "accelerator": "GPU"
+  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Crazydodo123/code-ml24/blob/main/nn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 73,
       "metadata": {
         "id": "S-5-sg3VK2mo"
       },
@@ -27,44 +45,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "mTX8JMWNRumc"
-      },
-      "outputs": [],
       "source": [
-        "air_canada = pd.read_csv('../datasets/new_data.csv')\n",
+        "air_canada = pd.read_csv('./new_branded_data.csv')\n",
         "air_canada = air_canada.dropna(subset=['choice'])\n",
         "\n",
         "y = air_canada['choice']\n",
-        "X = air_canada.drop(['id', 'Unnamed: 0','flight_departure_datetime', 'purchase_datetime', 'ticket_id', 'choice'], axis=1)"
-      ]
+        "X = air_canada.drop(['id', 'Unnamed: 0','flight_departure_datetime', 'purchase_datetime', 'ticket_id', 'choice'], axis=1)\n",
+        "X = X.dropna()"
+      ],
+      "metadata": {
+        "id": "mTX8JMWNRumc"
+      },
+      "execution_count": 74,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "Qp52IsVAR66M"
-      },
-      "outputs": [],
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "# Split data into train (80%), validation (10%), and test (10%)\n",
         "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)"
-      ]
+      ],
+      "metadata": {
+        "id": "Qp52IsVAR66M"
+      },
+      "execution_count": 75,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "m_BH5SLIZrIo"
-      },
-      "outputs": [],
       "source": [
         "from sklearn.pipeline import make_pipeline\n",
-        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.compose import ColumnTransformer, make_column_selector\n",
         "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
         "\n",
         "num_pipeline = make_pipeline(\n",
@@ -75,33 +89,33 @@
         "  OneHotEncoder()\n",
         ")\n",
         "\n",
+        "# Create the preprocessing transformer\n",
         "preprocessing = ColumnTransformer([\n",
-        "    ('cat', cat_pipeline, ['od']),\n",
-        "    ('num', num_pipeline, ['date_difference', 'trip_type', 'branded_fare', 'number_of_pax', 'ADVS_price', 'PREF_price',\n",
-        "       'ADVS_capacity', 'PREF_capacity', 'ADVS_inventory', 'PREF_inventory'])\n",
-        "  ], remainder='drop')"
-      ]
+        "    ('cat', cat_pipeline, ['od']),  # Only the 'od' column is categorical\n",
+        "    ('num', num_pipeline, make_column_selector(dtype_exclude='object'))  # Select all non-categorical columns\n",
+        "], remainder='drop')"
+      ],
+      "metadata": {
+        "id": "m_BH5SLIZrIo"
+      },
+      "execution_count": 76,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "fP-1JpL6Z8Tg"
-      },
-      "outputs": [],
       "source": [
         "X_train_prep = preprocessing.fit_transform(X_train)\n",
         "X_val_prep = preprocessing.fit_transform(X_val)\n",
         "X_test_prep = preprocessing.transform(X_test)"
-      ]
+      ],
+      "metadata": {
+        "id": "fP-1JpL6Z8Tg"
+      },
+      "execution_count": 77,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "id": "4DzOBegNRtZ5"
-      },
-      "outputs": [],
       "source": [
         "# One-hot encode the y (choice) column\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
@@ -112,15 +126,15 @@
         "y_train_prep = encoder.fit_transform(pd.DataFrame(y_train))\n",
         "y_val_prep = encoder.fit_transform(pd.DataFrame(y_val))\n",
         "y_test_prep = encoder.fit_transform(pd.DataFrame(y_test))"
-      ]
+      ],
+      "metadata": {
+        "id": "4DzOBegNRtZ5"
+      },
+      "execution_count": 78,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "id": "kPuMy187SKzA"
-      },
-      "outputs": [],
       "source": [
         "# Convert data to TensorFlow tensors\n",
         "X_train_tensor = tf.convert_to_tensor(X_train_prep, dtype=tf.float32)\n",
@@ -129,63 +143,36 @@
         "y_val_tensor = tf.convert_to_tensor(y_val_prep, dtype=tf.float32)\n",
         "X_test_tensor = tf.convert_to_tensor(X_test_prep, dtype=tf.float32)\n",
         "y_test_tensor = tf.convert_to_tensor(y_test_prep, dtype=tf.float32)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 27,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ryGPmd5QqvOw",
-        "outputId": "e06b9589-4284-42a1-e0e7-3ee00db4b424"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(TensorShape([153998, 20]), TensorShape([19250, 20]), TensorShape([19250, 20]))"
-            ]
-          },
-          "execution_count": 27,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
       ],
-      "source": [
-        "X_train_tensor.shape, X_val_tensor.shape, X_test_tensor.shape"
-      ]
+      "metadata": {
+        "id": "kPuMy187SKzA"
+      },
+      "execution_count": 79,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
-      "metadata": {
-        "id": "V026ZvLQQe5V"
-      },
-      "outputs": [],
       "source": [
-        "# Create a basic TensorFlow Sequential model that takes input with 20 features\n",
         "model = tf.keras.Sequential([\n",
-        "    tf.keras.layers.InputLayer(input_shape=(20,)),  # Input layer expecting 20 features per row\n",
+        "    tf.keras.layers.InputLayer(shape=(24,)),\n",
         "    tf.keras.layers.Dense(64, activation='relu'),\n",
         "    tf.keras.layers.Dense(32, activation='relu'),\n",
-        "    tf.keras.layers.Dense(3, activation='softmax')  # Output layer with 4 choices (assuming 4 classes in 'choice')\n",
+        "    tf.keras.layers.Dense(3, activation='softmax')\n",
         "])\n",
         "\n",
         "# Compile the model\n",
         "model.compile(optimizer='adam',\n",
         "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
-      ]
+      ],
+      "metadata": {
+        "id": "V026ZvLQQe5V"
+      },
+      "execution_count": 82,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
-      "metadata": {
-        "id": "7mSz3INhzuCF"
-      },
-      "outputs": [],
       "source": [
         "def create_model(optimizer='adam', activation='relu'):\n",
         "  model = tf.keras.Sequential([\n",
@@ -201,46 +188,26 @@
         "              metrics=['accuracy'])\n",
         "\n",
         "  return model"
-      ]
+      ],
+      "metadata": {
+        "id": "7mSz3INhzuCF"
+      },
+      "execution_count": 46,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!pip install scikeras"
+      ],
       "metadata": {
         "id": "bgTEwcflzbOq"
       },
-      "outputs": [],
-      "source": [
-        "!pip install scikeras"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tVHuX6nwyHuz",
-        "outputId": "1da0fdb7-d552-4888-9a64-48a4fdec2438"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Fitting 3 folds for each of 16 candidates, totalling 48 fits\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ],
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
         "from scikeras.wrappers import KerasClassifier\n",
@@ -273,15 +240,35 @@
         "best_model = rnd_search.best_estimator_\n",
         "test_accuracy = best_model.score(X_test, y_test)\n",
         "print(f\"Test Accuracy: {test_accuracy:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tVHuX6nwyHuz",
+        "outputId": "1da0fdb7-d552-4888-9a64-48a4fdec2438"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 3 folds for each of 16 candidates, totalling 48 fits\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+            "  warnings.warn(\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LUjaSwcQQ6iC"
-      },
-      "outputs": [],
       "source": [
         "# Train the model\n",
         "model.fit(X_train_tensor, y_train_tensor, epochs=20, validation_data=(X_val_tensor, y_val_tensor))\n",
@@ -289,25 +276,145 @@
         "# Evaluate the model on the test data\n",
         "test_loss, test_accuracy = model.evaluate(X_test_tensor, y_test_tensor)\n",
         "print(f\"Test accuracy: {test_accuracy:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LUjaSwcQQ6iC",
+        "outputId": "0bf58bec-c7d6-4676-8d33-f5749ea08646"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 2ms/step - accuracy: 0.7337 - loss: 0.6294 - val_accuracy: 0.7387 - val_loss: 0.6173\n",
+            "Epoch 2/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 1ms/step - accuracy: 0.7415 - loss: 0.6027 - val_accuracy: 0.7424 - val_loss: 0.6106\n",
+            "Epoch 3/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2ms/step - accuracy: 0.7434 - loss: 0.6010 - val_accuracy: 0.7408 - val_loss: 0.6118\n",
+            "Epoch 4/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7421 - loss: 0.6013 - val_accuracy: 0.7451 - val_loss: 0.6094\n",
+            "Epoch 5/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 1ms/step - accuracy: 0.7438 - loss: 0.5998 - val_accuracy: 0.7439 - val_loss: 0.6089\n",
+            "Epoch 6/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 1ms/step - accuracy: 0.7443 - loss: 0.5988 - val_accuracy: 0.7439 - val_loss: 0.6089\n",
+            "Epoch 7/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7435 - loss: 0.6016 - val_accuracy: 0.7429 - val_loss: 0.6075\n",
+            "Epoch 8/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7424 - loss: 0.6010 - val_accuracy: 0.7425 - val_loss: 0.6075\n",
+            "Epoch 9/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 2ms/step - accuracy: 0.7448 - loss: 0.5973 - val_accuracy: 0.7440 - val_loss: 0.6083\n",
+            "Epoch 10/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 2ms/step - accuracy: 0.7454 - loss: 0.5962 - val_accuracy: 0.7398 - val_loss: 0.6093\n",
+            "Epoch 11/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 2ms/step - accuracy: 0.7452 - loss: 0.5955 - val_accuracy: 0.7433 - val_loss: 0.6098\n",
+            "Epoch 12/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 2ms/step - accuracy: 0.7451 - loss: 0.5974 - val_accuracy: 0.7432 - val_loss: 0.6094\n",
+            "Epoch 13/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7460 - loss: 0.5968 - val_accuracy: 0.7446 - val_loss: 0.6075\n",
+            "Epoch 14/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 1ms/step - accuracy: 0.7459 - loss: 0.5971 - val_accuracy: 0.7436 - val_loss: 0.6075\n",
+            "Epoch 15/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7479 - loss: 0.5917 - val_accuracy: 0.7443 - val_loss: 0.6078\n",
+            "Epoch 16/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 2ms/step - accuracy: 0.7445 - loss: 0.5962 - val_accuracy: 0.7429 - val_loss: 0.6090\n",
+            "Epoch 17/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 1ms/step - accuracy: 0.7462 - loss: 0.5961 - val_accuracy: 0.7437 - val_loss: 0.6069\n",
+            "Epoch 18/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 2ms/step - accuracy: 0.7463 - loss: 0.5938 - val_accuracy: 0.7431 - val_loss: 0.6077\n",
+            "Epoch 19/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7457 - loss: 0.5944 - val_accuracy: 0.7438 - val_loss: 0.6082\n",
+            "Epoch 20/20\n",
+            "\u001b[1m4813/4813\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 2ms/step - accuracy: 0.7437 - loss: 0.5977 - val_accuracy: 0.7446 - val_loss: 0.6076\n",
+            "\u001b[1m602/602\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.7372 - loss: 0.6130\n",
+            "Test accuracy: 0.74\n"
+          ]
+        }
       ]
-    }
-  ],
-  "metadata": {
-    "accelerator": "GPU",
-    "colab": {
-      "authorship_tag": "ABX9TyNWBec6yJabTyAyZEI3bhee",
-      "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
     },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+    {
+      "cell_type": "code",
+      "source": [
+        "air_canada_to_predict = pd.read_csv(\"new_branded_baseline.csv\")\n",
+        "\n",
+        "columns_to_drop = ['id',\n",
+        "                   'Unnamed: 0',\n",
+        "          'ticket_id',\n",
+        "          'choice',\n",
+        "          'flight_departure_datetime',\n",
+        "          'purchase_datetime']\n",
+        "X_to_predict, y_to_predict = air_canada_to_predict.drop(columns_to_drop, axis=1), air_canada_to_predict[['id']]"
+      ],
+      "metadata": {
+        "id": "9wf4HXUGS1_5"
+      },
+      "execution_count": 84,
+      "outputs": []
     },
-    "language_info": {
-      "name": "python"
+    {
+      "cell_type": "code",
+      "source": [
+        "X_to_predict_prep = preprocessing.fit_transform(X_to_predict)"
+      ],
+      "metadata": {
+        "id": "6sz-AiuaXjfn"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = model.predict(X_to_predict_prep)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AAkLZjjfe94K",
+        "outputId": "ad1cfca9-d825-4a7e-9d27-b2432da45d12"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m2006/2006\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: save prediction in a csv file with column named choice_prediction\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Assuming 'prediction' is a NumPy array of predicted probabilities\n",
+        "predicted_classes = np.argmax(predictions, axis=1)\n",
+        "\n",
+        "# Create a DataFrame with the predictions\n",
+        "results_df = pd.DataFrame({'choice_prediction': predicted_classes})\n",
+        "\n",
+        "# Concatenate the results with the original 'id' column\n",
+        "results_df = pd.concat([y_to_predict, results_df], axis=1)\n",
+        "\n",
+        "\n",
+        "# Save the DataFrame to a CSV file\n",
+        "results_df.to_csv('prediction.csv', index=False)\n"
+      ],
+      "metadata": {
+        "id": "5B_erD5egAgo"
+      },
+      "execution_count": 98,
+      "outputs": []
     }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
