--- a/models/boost.ipynb
+++ b/models/boost.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +103,13 @@
     "preprocessing = ColumnTransformer([\n",
     "    ('cat', cat_pipeline, ['od', 'trip_type', 'branded_fare', 'total_cap']),\n",
     "    ('num', num_pipeline, ['time_diff', 'number_of_pax', 'ADVS_price', 'PREF_price', \n",
-    "                           'ADVS_capacity', 'PREF_capacity', 'ADVS_inventory', 'PREF_inventory',\n",
-    "                           'pref_inv_full', 'advs_ratio', 'pref_ratio'])\n",
+    "                           'ADVS_inventory', 'PREF_inventory', 'pref_inv_full', 'advs_ratio', 'pref_ratio'])\n",
     "  ], remainder='drop')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -128,13 +127,13 @@
       "text/plain": [
        "array([[ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
        "         0.        ,  0.        ,  1.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  1.        ,  0.        ,  1.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  1.        , -0.60670851,\n",
-       "         0.28654085,  0.58159208, -0.28605495,  0.62180611,  0.58853408,\n",
-       "         0.33954015, -1.19044634,  0.36953924, -1.05137821, -1.3070075 ]])"
+       "         0.        ,  1.        ,  1.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  1.        , -0.4026517 ,\n",
+       "        -0.84273457, -0.40322579, -0.01070787,  0.67003104, -0.66630362,\n",
+       "         0.36886299,  0.1142861 , -0.8458552 ]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,15 +151,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7436363636363637\n",
-      "F1 Score: 0.7801606531476153\n"
+      "Accuracy: 0.7454545454545455\n",
+      "F1 Score: 0.781635895744324\n"
      ]
     }
    ],
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame.to_csv(y_final, '../predictions/pred8.csv', index=False)"
+    "pd.DataFrame.to_csv(y_final, '../predictions/pred9.csv', index=False)"
    ]
   },
   {
